--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,11 @@ language: node_js
 node_js:
   - "8"
 
-sudo: required
+on:
+  push:
+    branches: master
+  pull_request:
+    branches: master
 
 git:
   quiet: true
@@ -122,6 +126,7 @@ cache:
 
 branches:
   only:
+    - master
     - packerina-dev
     - next-release
     - release-stage
